2002-03-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (init_options): New function.
	* client-src/client_util.h (init_options): Prototype.
	* client-src/sendsize.c (main): Use init_options.

2002-03-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client-util.c: Check for include and exclude files.

2002-03-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.
	* server-src/conffile.c(get-compress): Change message for bad 
	  compress argument.

2002-03-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.
	* client-src/client_util.c (parse_options): Parse auth= option.
	* client-src/client_util.h (option_t): Add auth field.
	* client-src/sendbackup.c: Use auth instead of bsd-auth.
	* client-src/sendsize.c: Init auth.

2002-03-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup-dump.c: use amdevice as argument to
	  amname_to_fstype.
	* client-src/sendsize.c: Use amdevice as argument to amname_to_dirname.
	* server-src/dumper.c: clear device if it is set to NODEVICE.

2002-03-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amindexd.c: Compilation fix.

2002-03-07 John R. Jackson (jrj@purdue.edu)

	* changer-src/chg-zd-mtx.sh.in: Allow whitespace on a VolumeTag line.
	  Compliments of Christopher McCrory <chrismcc@pricegrabber.com>.

2002-03-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/amrecover.h (list_disk): Prototype.
	* recover-src/set_commands.c (list_disk): New function.
	* recover-src/uparse.y: parse LISTDISK.
	* recover-src/uscan.l: listdisk keyword.
	* recover-src/help.c: help for listdisk.
	* man/amrecover.8.in: Doc for listdisk.
	* server-src/amindexd.c: New LISTDISK command.
	* docs/INDEXING: Document LISTDISK command.

2002-03-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Better output for autoflush.
