@@ -1,3 +1,8 @@
+2002-03-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+	Patch from Michael Frankowski <mfrankow@winternet.com>
+
+	* client-src/sendbackup-gnutar.c: Test for subdir before dbprintf.
+
 2002-03-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* client-src/client_util.c (init_options): New function.
